code25_all/scala/10554779.txt
scala> val set = Set("apricot", "banana", "clementine", "durian", "fig", "guava", "jackfruit", "kiwi", "lime", "mango")
set: scala.collection.immutable.Set[java.lang.String] = Set(banana, durian, fig, jackfruit, lime, mango, clementine, apricot, kiwi, guava)

scala> set.partition(_ length > 5)
<console>:1: error: ')' expected but integer literal found.
       set.partition(_ length > 5)
                                ^

scala> set.partition(_.length > 5)
res5: (scala.collection.immutable.Set[java.lang.String], scala.collection.immutable.Set[java.lang.String]) = (Set(banana, durian, jackfruit, clementine, apricot),Set(fig, lime, mango, kiwi, guava))

set.partition(_ length > 5)

set.partition(_.length > 5)

scala> set.partition((_ length) > 5)
<console>:9: error: missing parameter type for expanded function ((x$1) => x$1.length)
              set.partition((_ length) > 5)
                             ^

